# lhc-analysis-collection

./: .gitignore  ATLASMultiLeptonJetMETAnalysis.hs  crosssec.hs  evchainRun.hs  lhc-analysis-collection.cabal  parsertest.hs  tabletest.hs
HEP/Parser/: XSec.hs
HEP/Physics/Analysis/ATLAS/: SUSY.hs
HEP/Physics/Analysis/ATLAS/SUSY/: Format.hs
HEP/Util/: Table.hs
analysis/: 2013-07-26_prospino.hs  2013-07-26_prospino_2sq.hs  2013-08-05-XQLD-prospino_2sg.hs  2013-08-05-XQLD-prospino_2sq.hs  2013-08-05-XQLD-prospino_sqsg_2sg.hs  2013-08-05-XQLD-prospino_sqsg_2sq.hs  2013-08-05-XQLD-prospino_sqsg_sqsg.hs  ATLAS0L2to6JMET8TeV.hs  SimplifiedSUSY_ATLAS1to2L2to6JMET_8TeV.hs  SimplifiedSUSY_ATLAS1to2L2to6JMET_8TeV_2sq.hs  SimplifiedSUSY_sqsg_ATLAS0L2to6JMET_8TeV.hs  Simplified_ATLASMultiLeptonJetMETAnalysis.hs  Util.hs  XQLD_ATLAS1to6L2to6JMET_8TeV.hs  XQLD_ATLAS1to6L2to6JMET_8TeV_neutlosp_mgmnscan_2sg.hs  XQLD_ATLAS1to6L2to6JMET_8TeV_neutlosp_mgmnscan_2sq.hs  XQLD_ATLAS1to6L2to6JMET_8TeV_neutlosp_sqsgscan.hs  XQLD_ATLAS1to6L2to6JMET_8TeV_squarklosp.hs  XQLD_sqsg_ATLAS0L2to6JMET_8TeV.hs  XQLD_sqsg_ATLAS0L2to6JMET_neutLOSP_8TeV.hs  XQLD_sqsg_ATLASMultiLeptonJetMETAnalysis.hs  XUDD_sqsg_ATLAS0L2to6JMETAnalysis.hs  XUDD_sqsg_ATLAS0L2to6JMETAnalysis_8TeV.hs  XUDD_sqsg_ATLAS0L2to6JMETAnalysis_neutLOSP_8TeV.hs  XUDD_sqsg_ATLAS0L2to6JMET_neutLOSP_8TeV.hs  XUDD_sqsg_ATLAS0L2to6JMET_neutLOSP_8TeV_hist.hs  atlas0l26j.hs  findab_8TeV.hs  histograms_ATLAS0L2to6JMET_8TeV.hs  histograms_ATLAS1to2L2to6JMET_8TeV.hs  kzurek.pbs.st  makepbs.hs  runProspino.hs  zerolep.gpl  zerolep_sqsg.gpl  zerolep_sqsg_coutour.gpl
analysis/oldcode/: Simplified_ATLAS0L2to6JMETAnalysis.hs
exe/: 2013-05-27-XUDD-2sg.hs  2013-05-27-XUDD-2sq.hs  2013-05-27-XUDD-sqsg.hs  2013-06-10-XQLD-2sg.hs  2013-06-10-XQLD-2sq.hs  2013-06-10-XQLD-sqsg.hs  2013-06-27-XQLD-2sg.hs  2013-06-27-XQLD-2sq-nn.hs  2013-06-27-XQLD-2sq-no.hs  2013-06-27-XQLD-2sq-oo.hs  2013-06-27-XQLD-sqsg-n.hs  2013-06-27-XQLD-sqsg-o.hs  2013-06-27-XQLD-sqsg.hs  2013-07-03-XQLD.hs  2013-07-04-SimplifiedSUSY.hs  2013-07-05-XUDD.hs  2013-07-20-XQLD.hs  2013-07-20-XUDD.hs  2013-07-22-SimplifiedSUSYlep.hs  2013-07-24-SimplifiedSUSYlepgluglu.hs  2013-08-05-XQLD.hs  2013-08-05-XQLD_2sq.hs  crosssec.hs  evchainRun.hs  evchainRunLeptoQuark.hs  evchainRunSimplified.hs  evchainRunSimplifiedWW.hs  evchainRunXQLD.hs  evchainRunXQLD_2sg.hs  evchainRunXQLD_2sq.hs  evchainRunXQLD_sqsg.hs  leptoquark.hs  madgraphRun.hs  madgraphRunSimplifiedSUSY.hs  sanitizertest.hs
heavyhiggs/: HeavyHiggs.hs  HeavyHiggs2T2B.hs  HeavyHiggs2T2BInnerTop.hs  HeavyHiggs2T2BOuterTop.hs  HeavyHiggs4T.hs  MCRun_standardcandle.hs  MCRun_ttbarheft.hs  MCRun_ttbarheft.nix  MCRun_ttbarqcd.hs  SM.hs  combine.hs  combine2.hs  feynhiggs.hs  firstcut.hs  heft.hs  lhcoparser.hs  lheparsertest.hs  lheparsertest2.hs  longtable.hs  longtable.tex.hastache  minv_sm.hs  optimize.hs  optimize2.hs  optresult.hs  partonlevel.hs  secondcut.hs  test.hs  thirdcut.hs  xsecgraph.hs  xsecgraphQCD.hs  xsecptn.gnu  xsecptnA.gnu
heavyhiggs/Pipes/: LHCO.hs
lib/HEP/Parser/: XSec.hs
lib/HEP/Physics/Analysis/ATLAS/: Common.hs  SUSY_0L2to6J.hs  SUSY_MultiLepton.hs
lib/HEP/Physics/Analysis/ATLAS/Exotic/: Leptoquark.hs
lib/HEP/Physics/Analysis/ATLAS/SUSY/: Format.hs  SUSY_0L2to6J.hs  SUSY_0L2to6JMET_7TeV.hs  SUSY_0L2to6JMET_8TeV.hs  SUSY_0L2to6J_7TeV.hs  SUSY_0L2to6J_8TeV.hs  SUSY_1to2L2to6JMET_8TeV.hs  SUSY_MultiLepton.hs  SUSY_MultiLepton_7TeV.hs
lib/HEP/Physics/Analysis/ATLAS/SUSY/SUSY_MultiLepton/: PrettyPrint.hs
lib/HEP/Physics/Analysis/ATLAS/SUSY/SUSY_MultiLepton_7TeV/: PrettyPrint.hs
lib/HEP/Physics/Analysis/ATLAS/SUSY_MultiLepton/: PrettyPrint.hs
lib/HEP/Physics/Analysis/Common/: Lens.hs  Merge.hs  PhyEventNoTau.hs  PhyEventNoTauNoBJet.hs  Prospino.hs  XSecNTotNum.hs
lib/HEP/Util/: Format.hs  Work.hs
pic/: combined.gpl  combined.gpl.st  combined_0lep.gpl.st  combined_1lep.gpl.st  combined_multilep.gpl.st  contour.gpl.st  contour_1lep.gpl.st  contour_8TeV_0lep_sqsg_simplifiedsusy.gpl  contour_8TeV_0lep_sqsg_xqld.gpl  contour_8TeV_0lep_sqsg_xudd.gpl  contour_8TeV_0lep_sqsg_xudd100.gpl  contour_simplifiedsusy.gpl  contour_simplifiedv.gpl  contour_simplifiesusy.gpl  contour_xqld.gpl  contour_xudd.gpl  drawfigure.hs  drawfigure_0lep.hs  drawfigure_1lep.hs  drawfigure_multilep.hs  firstjetpt.C  firstlepPT.C  firstlepPT_xqld_noneut.C  makemesh.hs  meff.C  meff_xudd_neutlosp.C  missinget.C  missinget_xqld.C  missinget_xqld_noneut.C  missinget_xudd_neut.C  missinget_xudd_noneut.C  multilep_simplifiedsusylep_8TeV_2sg.gpl  multilep_simplifiedsusylep_8TeV_2sq.gpl  multilep_xqld_8TeV_2sg.gpl  multilep_xqld_8TeV_2sq.gpl  njet.C  njet_squarklosp.C  njet_xudd_neutlosp.C  ratioMET_meff.C  ratioMET_meff_xudd_neutlosp.C  (+7 more)
template/: prospino.in.les_houches.st  prospino_main.f90.st
test/: LeptoQuark1_ATLASLeptoQuark1.hs  Simplified_ATLAS0L2to6JMETAnalysis.hs  Simplified_ATLASMultiLeptonJetMETAnalysis.hs  XQLD_ATLAS0L2to6JMETAnalysis.hs  XQLD_ATLASMultiLeptonJetMETAnalysis.hs  XQLD_sqonly_ATLASMultiLeptonJetMETAnalysis.hs  XQLD_sqsg_ATLAS0L2to6JMETAnalysis.hs  atlas0l26j.hs  checkfile2.hs  findab.hs  getnumSimplifiedSUSY.hs  getnumXQLD.hs  multilep.gpl  multilep_sqsg.gpl  zerolep_sqsg.gpl
