Name:		lhc-analysis-collection
Version:	0.999
Synopsis:	
Description: 	
License: 	GPL-3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.9.2
data-files:   


Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base>4, 
                   mtl>2, 
                   directory, 
                   filepath,
                   bytestring >= 0.9,
                   attoparsec, 
                   cmdargs, 
                   hastache,
                   text,
                   text-format,
                   LHCOAnalysis-type, 
                   LHCOAnalysis,
                   LHEParser >= 0.999,
                   HEPUtil, 
                   xml-types,
                   conduit > 1,
                   conduit-util >= 0.999,
                   zlib-conduit >= 1,
                   xml-conduit >= 1, 
                   vector, 
                   hmatrix, 
                   random >= 1.0,
                   unordered-containers >= 0.2, 
                   hashable >= 1.1,
                   madgraph-auto >= 0.999,
                   madgraph-auto-model >= 0.999,
                   webdav-manager >= 0.999,
                   process,
                   unix,
                   containers >= 0.4, 
                   pureMD5 >= 2.1, 
                   zlib >= 0.5, 
                   indexed-extras, 
                   indexed 
                   
  Exposed-Modules: 
                   HEP.Parser.XSec
                   HEP.Physics.Analysis.ATLAS.Common 
                   HEP.Physics.Analysis.ATLAS.SUSY_0L2to6J
                   HEP.Physics.Analysis.ATLAS.SUSY_MultiLepton
                   HEP.Physics.Analysis.ATLAS.SUSY_MultiLepton.PrettyPrint
                   HEP.Util.Format
                   HEP.Util.Table 

  Other-Modules: 

 
		 