Name:		lhc-analysis-collection
Version:	0.999
Synopsis:	
Description: 	
License: 	GPL-3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.9.2
data-files:   

-- Executable leptoquark
--  Main-is: leptoquark.hs
--  hs-source-dirs: exe
--  ghc-options: 	-Wall -threaded -funbox-strict-fields -fno-warn-unused-do-bind
--  ghc-prof-options: -caf-all -auto-all
--  Build-Depends: 
--                 base>4, 
--                 webdav-manager,
--                 HEPUtil, 
--                 bytestring, 
--                 LHCOAnalysis, 
--                 zlib,
--                 lhc-analysis-collection, 
--                 HROOT-core, 
--                 HROOT-hist, 
--                 HROOT-io, 
--                 HROOT-graf



Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans -fno-warn-missing-signatures 
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base>4, 
                   mtl>2, 
                   transformers >= 0.3,
                   either >= 3,
                   directory, 
                   filepath,
                   bytestring >= 0.9,
                   attoparsec, 
                   cmdargs, 
                   hastache,
                   text,
                   text-format,
                   LHCOAnalysis-type, 
                   LHCOAnalysis,
                   LHEParser >= 0.999,
                   HEPUtil, 
                   xml-types,
                   conduit > 1,
                   conduit-util >= 0.999,
                   zlib-conduit >= 1,
                   xml-conduit >= 1, 
                   vector, 
                   hmatrix, 
                   random >= 1.0,
                   unordered-containers >= 0.2, 
                   hashable >= 1.1,
                   madgraph-auto >= 0.999,
                   madgraph-auto-model >= 0.999,
                   webdav-manager >= 0.999,
                   pipeline-eventgen >= 0.999, 
                   process,
                   unix,
                   containers >= 0.4, 
                   pureMD5 >= 2.1, 
                   zlib >= 0.5, 
                   aeson >= 0.6, 
                   aeson-pretty >= 0.7,
                   indexed-extras, 
                   indexed, 
                   lens 
                   
  Exposed-Modules: 
                   HEP.Parser.XSec
                   HEP.Physics.Analysis.ATLAS.Common 
                   -- HEP.Physics.Analysis.ATLAS.Exotic.Leptoquark
                   HEP.Physics.Analysis.ATLAS.SUSY.SUSY_0L2to6J
                   HEP.Physics.Analysis.ATLAS.SUSY.SUSY_MultiLepton
                   -- HEP.Physics.Analysis.ATLAS.SUSY_MultiLepton.PrettyPrint
                   HEP.Physics.Analysis.Common.XSecNTotNum 
                   HEP.Util.Format
                   HEP.Util.Table 
                   HEP.Util.Work

  Other-Modules: 

 
		 