Name:		lhc-analysis-collection
Version:	0.999
Synopsis:	
Description: 	
License: 	GPL-3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.9.2
data-files:   
                resource/prospino_2_1.tar.gz
                template/prospino.in.les_houches.st
                template/prospino_main.f90.st

Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans -fno-warn-missing-signatures 
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base>4, 
                   -- 
                   aeson >= 0.6, 
                   aeson-pretty >= 0.7,
                   attoparsec, 

                   bytestring >= 0.9,
                   conduit > 1,
                   conduit-util >= 0.999,

                   either >= 3,

                   -- indexed-extras >= 0.1.1.0, 
                   -- indexed, 

                   mtl>2, 
                   transformers >= 0.3,
                   directory, 
                   filepath,
                   cmdargs, 
                   hastache,
                   LHCOAnalysis-type, 
                   LHCOAnalysis,
                   LHEParser >= 0.999,
                   HEPUtil, 
                   text,
                   text-format,

                   unordered-containers >= 0.2, 

                   vector, 

                   xml-types,
                   xml-conduit >= 1, 

                   zlib >= 0.5, 

                   zlib-conduit >= 1,

                   hmatrix, 
                   random >= 1.0,
                   hashable >= 1.1,
                   madgraph-auto >= 0.999,
                   madgraph-auto-model >= 0.999,
                   webdav-manager >= 0.999,
                   pipeline-eventgen >= 0.999, 
                   process,
                   unix,
                   containers >= 0.4, 
                   pureMD5 >= 2.1, 
                   lens, 
                   data-default
                   
  Exposed-Modules: 
                   HEP.Parser.XSec
                   -- HEP.Physics.Analysis.ATLAS.Common 
                   -- HEP.Physics.Analysis.ATLAS.SUSY.SUSY_0L2to6JMET_7TeV
                   -- HEP.Physics.Analysis.ATLAS.SUSY.SUSY_0L2to6JMET_8TeV
                   -- HEP.Physics.Analysis.ATLAS.SUSY.SUSY_1to2L2to6JMET_8TeV
                   -- HEP.Physics.Analysis.ATLAS.SUSY.SUSY_MultiLepton_7TeV
                   HEP.Physics.Analysis.Common.Lens
                   HEP.Physics.Analysis.Common.Merge
                   HEP.Physics.Analysis.Common.PhyEventNoTau
                   HEP.Physics.Analysis.Common.PhyEventNoTauNoBJet
                   HEP.Physics.Analysis.Common.Prospino
                   HEP.Physics.Analysis.Common.XSecNTotNum 

                   HEP.Util.Format
                   HEP.Util.Table 
                   HEP.Util.Work

                   -- HEP.Physics.Analysis.ATLAS.Exotic.Leptoquark
                   -- HEP.Physics.Analysis.ATLAS.SUSY_MultiLepton_7TeV.PrettyPrint

--  Other-Modules: 
                   Paths_lhc_analysis_collection
 
		 